# helix-hive

./: .gitignore  .python-version  CONTEXT.md  LEARNINGS.md  Makefile  README.md  debug.ipynb  main.py  pyproject.toml
agents/: design.py  retriever.py
data/cache/: alignment.fasta  conservation.json  constraints.json  design_proposals.json  lysozyme_alignment.fasta  lysozyme_cons_dedup.json  lysozyme_cons_nodedup.json  lysozyme_conservation.json  lysozyme_constraints.json  lysozyme_constraints_dedup.json  lysozyme_constraints_nodedup.json  lysozyme_index.metadata.json  lysozyme_index.npz  lysozyme_msa_dedup.fasta  lysozyme_msa_nodedup.fasta  lysozyme_pssm.json  retriever_index.metadata.json  retriever_index.npz  tmp_input.fasta  toy_alignment.fasta  toy_pssm.json
data/examples/: expected_lysozyme_constraints.json  lysozyme.fasta  lysozyme_homologs.fasta  lysozyme_homologs_with_dupes.fasta  small.fasta
models/: esm.py
notebooks/: workflow.ipynb
scripts/: lysozyme_test.sh  lysozyme_with_homologs_test.sh
tools/: compare_conservation.py  validate_constraints.py
utils/: alignment.py  conservation.py  constraints.py  filter.py  io.py  pssm.py  pssm_debug.py  pssm_utils.py  visualize.py
